--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
     executor:
       name: android/android-machine
       resource-class: large
+      tag: default
 
     steps:
       - checkout
