--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 gradlePlugin = "8.7.1"
 googleServices = "4.4.2"
 kotlin = "2.0.21"
+wearable = "2.9.0"
 
 [plugins]
 android-library = { id = "com.android.library" }
@@ -13,7 +14,29 @@ moduleDependencyGraph = { id = "com.savvasdalkitsis.module-dependency-graph", ve
 [libraries]
 com-android-tools-build = { group = "com.android.tools.build", name = "gradle", version.ref = "gradlePlugin" }
 com-google-gms = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
-com-google-firebase = { group = "com.google.firebase", name = "firebase-crashlytics-gradle", version = "3.0.2" }
-kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-kotlin-allopen = { module = "org.jetbrains.kotlin:kotlin-allopen", version.ref = "kotlin" }
-kotlin-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
+
+com-google-firebase-gradle = { group = "com.google.firebase", name = "firebase-crashlytics-gradle", version = "3.0.2" }
+com-google-firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version = "33.4.0" }
+com-google-firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx" }
+com-google-firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
+com-google-firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging-ktx" }
+com-google-firebase-auth = { group = "com.google.firebase", name = "firebase-auth-ktx" }
+com-google-firebase-database = { group = "com.google.firebase", name = "firebase-database-ktx" }
+com-google-android-gms-playservices-measurement = { group = "com.google.android.gms", name = "play-services-measurement-api", version = "22.1.2" }
+com-google-android-gms-playservices-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version = "18.2.0" }
+com-google-android-gms-playservices-location = { group = "com.google.android.gms", name = "play-services-location", version = "21.3.0" }
+
+com-google-android-material = { group = "com.google.android.material", name = "material", version = "1.12.0" }
+com-google-android-flexbox = { group = "com.google.android.flexbox", name = "flexbox", version = "3.0.0" }
+
+com-google-android-wearable = { group = "com.google.android.wearable", name = "wearable", version.ref = "wearable" }
+com-google-android-wearable-support = { group = "com.google.android.support", name = "wearable", version.ref = "wearable" }
+
+com-google-truth = { group = "com.google.truth", name = "truth", version = "1.1.5" }
+com-google-guava = { group = "com.google.guava", name = "guava", version = "32.1.3-jre" }
+com-google-code-gson = { group = "com.google.code.gson", name = "gson", version = "2.10.1" }
+com-google-crypto-tink = { group = "com.google.crypto.tink", name = "tink-android", version = "1.10.0" }
+
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlin-allopen = { group = "org.jetbrains.kotlin", name = "kotlin-allopen", version.ref = "kotlin" }
+kotlin-serialization = { group = "org.jetbrains.kotlin", name = "kotlin-serialization", version.ref = "kotlin" }
