--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,9 +6,10 @@ kotlin = "2.0.21"
 wearable = "2.9.0"
 room = "2.6.1"
 dagger = "2.48.1"
-mockito = "5.6.0"
+mockito = "5.10.0"
+junit = "5.10.1"
 okhttp = "4.12.0"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-coroutines = "1.9.0"
 
@@ -92,3 +93,7 @@ org-mockito-android = { group = "org.mockito", name = "mockito-android", version
 org-mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
 org-mockito-junit-jupiter = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
 org-mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version = "5.1.0" }
+
+org-junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit" }
+org-junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
+org-junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
