--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ okhttp = "4.12.0"
 retrofit = "2.11.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-coroutines = "1.9.0"
+work = "2.9.1"
 
 [plugins]
 android-library = { id = "com.android.library" }
@@ -70,11 +71,32 @@ kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version = "0.6.1" }
 
+
+androidx-activity = { group = "androidx.activity", name = "activity-ktx", version = "1.9.3" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version = "1.7.0" }
+androidx-biometric = { group = "androidx.biometric", name = "biometric", version = "1.1.0" }
+androidx-browser = { group = "androidx.browser", name = "browser", version = "1.8.0" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version = "2.1.4" }
+androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.13.1" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.8.4" }
+androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version = "1.0.0" }
+androidx-legacy-support = { group = "androidx.legacy", name = "legacy-support-v13", version = "1.0.0" }
+androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version = "2.8.6" }
+androidx-media3-common = { group = "androidx.media3", name = "media3-common", version = "1.4.1" }
+androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version = "2.8.3" }
+androidx-preference = { group = "androidx.preference", name = "preference-ktx", version = "1.2.1" }
 androidx-room = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-rxjava3 = { group = "androidx.room", name = "room-rxjava3", version.ref = "room" }
 androidx-room-testing = { group = "androidx.room", name = "room-testing", version.ref = "room" }
+androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version = "1.1.0" }
+androidx-test-rules = { group = "androidx.test", name = "rules", version = "1.6.1" }
+androidx-test-ext = { group = "androidx.test.ext", name = "junit-ktx", version = "1.2.1" }
+androidx-work-runtime = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
+androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "work" }
+androidx-wear = { group = "androidx.wear", name = "wear", version = "1.3.0" }
+androidx-wear-tiles = { group = "androidx.wear.tiles", name = "tiles", version = "1.4.1" }
 
 io-reactivex-rxjava3-rxjava = { group = "io.reactivex.rxjava3", name = "rxjava", version = "3.1.17" }
 io-reactivex-rxjava3-rxkotlin = { group = "io.reactivex.rxjava3", name = "rxkotlin", version = "3.0.1" }
@@ -87,13 +109,34 @@ com-squareup-retrofit2-retrofit = { group = "com.squareup.retrofit2", name = "re
 com-squareup-retrofit2-adapter-rxjava3 = { group = "com.squareup.retrofit2", name = "adapter-rxjava3", version.ref = "retrofit" }
 com-squareup-retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 
+org-apache-commons-lang3 = { group = "org.apache.commons", name = "commons-lang3", version = "3.17.0" }
 org-mozilla-rhino = { group = "org.mozilla", name = "rhino", version = "1.7.15" }
 
 org-mockito-android = { group = "org.mockito", name = "mockito-android", version.ref = "mockito" }
 org-mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
 org-mockito-junit-jupiter = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
 org-mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version = "5.4.0" }
+org-slf4j-api = { group = "org.slf4j", name = "slf4j-api", version = "2.0.16" }
+com-github-tony19-logback-android = { group = "com.github.tony19", name = "logback-android", version = "3.0.0" }
 
 org-junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit" }
 org-junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 org-junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
+
+com-madgag-spongycastle = { group = "com.madgag.spongycastle", name = "core", version = "1.58.0.0" }
+com-caverock-androidsvg = { group = "com.caverock", name = "androidsvg", version = "1.4" }
+net-danlew-android-joda = { group = "net.danlew", name = "android.joda", version = "2.13.0" }
+joda-time = { group = "joda-time", name = "joda-time", version = "2.13.0" }
+org-json = { group = "org.json", name = "json", version = "20230618" }
+org-skyscreamer-jsonassert = { group = "org.skyscreamer", name = "jsonassert", version = "1.5.3" }
+com-scottyab-rootbeer-lib = { group = "com.scottyab", name = "rootbeer-lib", version = "0.1.1" }
+com-eatthepath-java-otp = { group = "com.eatthepath", name = "java-otp", version = "0.4.0" }
+com-github-kenglxn-qrgen-android = { group = "com.github.kenglxn.QRGen", name = "android", version = "3.0.1" }
+io-socket-client = { group = "io.socket", name = "socket.io-client", version = "2.1.1" }
+io-kotlintest-runner-junit5 = { group = "io.kotlintest", name = "kotlintest-runner-junit5", version = "3.4.2" }
+com-polidea-rxandroidble3 = { group = "com.polidea.rxandroidble3", name = "rxandroidble", version = "1.19.0" }
+com-jakewharton-rx3-replaying-share = { group = "com.jakewharton.rx3", name = "replaying-share", version = "3.0.0" }
+commons-codec = { group = "commons-codec", name = "commons-codec", version = "1.17.1" }
+com-github-guepardoapps-kulid = { group = "com.github.guepardoapps", name = "kulid", version = "2.0.0.0" }
+com-thoughtworks-xstream = { group = "com.thoughtworks.xstream", name = "xstream", version = "1.4.20" }
+com-garmin-connectiq = { group = "com.garmin.connectiq", name = "ciq-companion-app-sdk", version = "2.0.3" }
