Fix dev dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ retrofit = "2.11.0"
 kotlinx-serialization = "1.7.3"
 kotlinx-coroutines = "1.9.0"
 work = "2.10.0"
+datastorePreferences = "1.1.1"
 
 [plugins]
 android-library = { id = "com.android.library" }
@@ -79,6 +80,7 @@ androidx-biometric = { group = "androidx.biometric", name = "biometric", version
 androidx-browser = { group = "androidx.browser", name = "browser", version = "1.8.0" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version = "2.2.0" }
 androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.15.0" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.8.5" }
 androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version = "1.0.0" }
 androidx-legacy-support = { group = "androidx.legacy", name = "legacy-support-v13", version = "1.0.0" }
