--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 # libs.versions.toml
 [versions]
-gradlePlugin = "8.7.2"
+gradlePlugin = "8.7.3"
 googleServices = "4.4.2"
 kotlin = "2.1.0"
 wearable = "2.9.0"
 room = "2.6.1"
-dagger = "2.52"
+dagger = "2.53"
 mockito = "5.14.2"
 junit = "5.11.3"
 okhttp = "4.12.0"
@@ -14,7 +14,7 @@ kotlinx-serialization = "1.7.3"
 kotlinx-coroutines = "1.9.0"
 work = "2.10.0"
 datastorePreferences = "1.1.1"
-annotation = "1.7.0-alpha02"
+annotation = "1.9.1"
 
 [plugins]
 android-library = { id = "com.android.library" }
