--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,7 @@ include ':plugins:sensitivity'
 include ':plugins:smoothing'
 include ':plugins:source'
 include ':plugins:sync'
+include ':pump:apex'
 include ':pump:combov2'
 include ':pump:combov2:comboctl'
 include ':pump:dana'
