--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ kotlin = "2.1.10"
 wearable = "2.9.0"
 room = "2.6.1"
 dagger = "2.55"
-mockito = "5.16.0"
+mockito = "5.16.1"
 junit = "5.12.1"
 okhttp = "4.12.0"
 retrofit = "2.11.0"
@@ -54,6 +54,7 @@ com-google-android-wearable-support = { group = "com.google.android.support", na
 com-google-guava = { group = "com.google.guava", name = "guava", version = "33.4.0-jre" }
 com-google-code-gson = { group = "com.google.code.gson", name = "gson", version = "2.12.1" }
 com-google-crypto-tink = { group = "com.google.crypto.tink", name = "tink-android", version = "1.17.0" }
+com-google-truth = { group = "com.google.truth", name = "truth", version = "1.1.5" }
 
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-allopen = { group = "org.jetbrains.kotlin", name = "kotlin-allopen", version.ref = "kotlin" }
@@ -84,6 +85,7 @@ androidx-browser = { group = "androidx.browser", name = "browser", version = "1.
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version = "2.2.1" }
 androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.15.0" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.6.1" }
 androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version = "1.8.6" }
 androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version = "1.0.0" }
 androidx-legacy-support = { group = "androidx.legacy", name = "legacy-support-v13", version = "1.0.0" }
@@ -99,6 +101,7 @@ androidx-room-testing = { group = "androidx.room", name = "room-testing", versio
 androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version = "1.1.0" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version = "1.6.1" }
 androidx-test-ext = { group = "androidx.test.ext", name = "junit-ktx", version = "1.2.1" }
+androidx-uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version = "2.3.0" }
 androidx-work-runtime = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "work" }
 androidx-wear = { group = "androidx.wear", name = "wear", version = "1.3.0" }
